--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -483,6 +483,9 @@ One can find `here <https://github.com/Olivier-Boudeville/Ceylan-Traces/tree/mas
 
 .. _`max memory`:
 
+
+.. _`max memory`:
+
 An important setting is how much memory (RAM) is allowed for that tool (see the ``MAX_MEMORY`` entry in `startup.conf <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/conf/logmx/startup.conf>`_).
 
 
@@ -676,6 +679,40 @@ The testing shall complete successfully (if it is not the case, see our support_
 .. Note:: Traces is built and tested at each commit through `continuous integration <https://github.com/Olivier-Boudeville/Ceylan-Traces/actions?query=workflow%3A%22Erlang+CI%22>`_, and the same holds for its two prerequisites (`Myriad <https://myriad.esperide.org>`_ and `WOOPER <https://wooper.esperide.org>`_).
 		  Reciprocally this procedure applies to the projects based on it (e.g. `US-Web <https://us-web.esperide.org/>`_), so in terms of usability, confidence should be high.
 
+
+---------------
+Troubleshooting
+---------------
+
+
+Lost Traces
+===========
+
+If having sent traces that cannot be found through the trace supervision (or that even disappear live!), most probably that they were properly sent, collected and stored, but that they were too numerous to be displayed.
+
+In LogMX, this can be seen in the bottom-right status bar, where a fully-filled red rectangle shows the percentage of the maximum number of entries currently met: ``100%`` most likely means that too many traces were to be displayed for the current settings, and thus that latter traces replaced former ones.
+
+A solution is either to send less traces, or to increase that display threshold, either directly in to the LogMX interface (by entering an higher value on the left of said rectangle), or in the ``logmx.properties`` configuration file, by setting its ``autoRefreshEntriesLimit`` attribute to an higher value.
+
+A related setting is the `max memory`_ that the (Java) configuration of LogMX allows.
+
+
+
+Duplicated Traces
+=================
+
+In rather rare contexts (typically when requesting LogMX to focus on the last entries, whereas dozens of thousands of them are added), the trace supervision may show duplicated traces.
+
+For example, an emitter that sent 6 traces will be marked as having sent 8 of them, and a pair of successive traces will be shown twice (first that pair, then other traces may interleave, then the pair will be listed again), with non-duplicated IDs (as shown in the leftmost LogMX column).
+
+It is just an artefact due to this specific execution of LogMX though: one can check that reading this file again, but this time as a whole (instead of live) does not show duplicated traces anymore; indeed these traces were actually stored by Ceylan-Traces in the ``*.traces`` file only once.
+
+
+
+Lost LogMX Settings
+===================
+
+LogMX will write its configuration files (notably ``logmx.properties``) when shutdown. So before modifying any of these files, ensure first that no LogMX instance is still running (otherwise one's changes will be overwritten).
 
 ---------------
 Troubleshooting
