--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -288,6 +288,14 @@ The purpose of the ``trace_categorize`` macro used in the above example is to re
 .. [#] Otherwise, should the various constructors involved declare their own categorisation (which is the general case) and send traces, creating a cat instance would result in having these traces sorted under different emitter categories (ex: the one declared by ``class_Creature``, then by ``class_Cat``, etc.). Tracking the messages emitted by a given instance would be made more difficult than needed, using this macro allows to have them gathered all in the most precise category from the start.
 
 
+Sometimes a very large number of trace emitters exist, to the point that selecting them becomes tedious. One workaround is to sort them according to their prefixes (first characters), for an easier browsing thereof.
+
+For example, instead of having, under a ``"characters"`` trace categorization , ``"John-Paul"``, ``"John-Mark"``, ``"John-Eric"``, etc., a ``"characters.John-"`` trace categorization could be preferred so that it groups all the characters named accordingly.
+
+This can be done by replacing the use of the ``trace_categorize/1`` macro (defined in ``class_TraceEmitter.hrl``) above with a pair whose first element is the actual emitter name and second element is its original categorization augmented of a prefix obtained from its name (here this pair would simply be ``{"John-Mark", "characters.John-"}``).
+
+Refer to ``class_TraceEmitter:subcategorize/1`` for an example where an additional grouping level is introduced, based on the first character of the trace emitter name. Then if a specified emitter name would have been ``"some.prefix.foobar"``, this function ensures that ``"some.prefix.f.foobar"`` is used, resulting in an alphabetical dispatching of emitter names (and this emitter being sorted among all the ones whose name starts with ``f``).
+
 
 
 Activation / Desactivation
@@ -471,6 +479,9 @@ LogMX-related Hints
 ===================
 
 One can find `here <https://github.com/Olivier-Boudeville/Ceylan-Traces/tree/master/conf/logmx>`_ various elements in order to better integrate LogMX (ex: parser, configuration files, etc.).
+
+
+.. _`max memory`:
 
 An important setting is how much memory (RAM) is allowed for that tool (see the ``MAX_MEMORY`` entry in `startup.conf <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/conf/logmx/startup.conf>`_).
 
@@ -665,6 +676,40 @@ The testing shall complete successfully (if it is not the case, see our support_
 .. Note:: Traces is built and tested at each commit through `continuous integration <https://github.com/Olivier-Boudeville/Ceylan-Traces/actions?query=workflow%3A%22Erlang+CI%22>`_, and the same holds for its two prerequisites (`Myriad <https://myriad.esperide.org>`_ and `WOOPER <https://wooper.esperide.org>`_).
 		  Reciprocally this procedure applies to the projects based on it (ex: `US-Web <https://us-web.esperide.org/>`_), so in terms of usability, confidence should be high.
 
+
+---------------
+Troubleshooting
+---------------
+
+
+Lost Traces
+===========
+
+If having sent traces that cannot be found through the trace supervision (or that even disappear live!), most probably that they were properly sent, collected and stored, but that they were too numerous to be displayed.
+
+In LogMX, this can be seen in the bottom-right status bar, where a fully-filled red rectangle shows the percentage of the maximum number of entries currently met: ``100%`` most likely means that too many traces were to be displayed for the current settings, and thus that latter traces replaced former ones.
+
+A solution is either to send less traces, or to increase that display threshold, either directly in to the LogMX interface (by entering an higher value on the left of said rectangle), or in the ``logmx.properties`` configuration file, by setting its ``autoRefreshEntriesLimit`` attribute to an higher value.
+
+A related setting is the `max memory`_ that the (Java) configuration of LogMX allows.
+
+
+
+Duplicated Traces
+=================
+
+In rather rare contexts (typically when requesting LogMX to focus on the last entries, whereas dozens of thousands of them are added), the trace supervision may show duplicated traces.
+
+For example, an emitter that sent 6 traces will be marked as having sent 8 of them, and a pair of successive traces will be shown twice (first that pair, then other traces may interleave, then the pair will be listed again), with non-duplicated IDs (as shown in the leftmost LogMX column).
+
+It is just an artefact due to this specific execution of LogMX though: one can check that reading this file again, but this time as a whole (instead of live) does not show duplicated traces anymore; indeed these traces were actually stored by Ceylan-Traces in the ``*.traces`` file only once.
+
+
+
+Lost LogMX Settings
+===================
+
+LogMX will write its configuration files (notably ``logmx.properties``) when shutdown. So before modifying any of these files, ensure first that no LogMX instance is still running (otherwise one's changes will be overwritten).
 
 
 
