--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -31,7 +31,7 @@
 
 
 % As an hex-package dependency:
-%{deps, [ {wooper, "WOOPER_VERSION_FOR_REBAR"} ] }.
+%{deps, [ {wooper, "WOOPER_VERSION_FOR_OTP"} ] }.
 
 
 % Include directories found in INC:
@@ -77,7 +77,7 @@
 %
 {relx, [
 
-  {release, {traces_release, "VERSION_FOR_REBAR"},
+  {release, {traces_release, "VERSION_FOR_OTP"},
 			% myriad and wooper thus implied:
 			[sasl, traces]},
 
