--- a/doc/overview.edoc.template
+++ b/doc/overview.edoc.template
@@ -1,8 +1,8 @@
 @author Olivier Boudeville <olivier (dot) boudeville (at) esperide (dot) com>
 
-@copyright 2021 Olivier Boudeville
+@copyright COPYRIGHT_YEAR Olivier Boudeville
 
-@version API PROJECT_VERSION
+@version PROJECT_VERSION
 
 @title Welcome to the documentation of the Ceylan-Traces API
 
