--- a/doc/overview.edoc.template
+++ b/doc/overview.edoc.template
@@ -4,7 +4,7 @@
 
 @version PROJECT_VERSION
 
-@title Welcome to the documentation of the Ceylan-Traces API
+@title Welcome to the official documentation of the Ceylan-Traces API
 
 @doc <h3>Overview</h3>
 
