--- a/examples/class_TraceTemplate_test.erl.sample
+++ b/examples/class_TraceTemplate_test.erl.sample
@@ -1,12 +1,18 @@
 -module(class_X_test).
 
+-moduledoc """
+This test...
+""".
+
 
 -include("traces_for_tests.hrl").
 
 
-% Runs the test.
+% @doc Runs the test.
 run() ->
 
 	?test_start,
+
+	...
 
 	?test_stop.
