--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -400,7 +400,7 @@ Indeed the tool that generally we use for trace browsing is `LogMX <http://www.l
 :raw-latex:`\includegraphics[scale=0.20]{logmx-interface.png}`
 
 
-We implemented a Java-based parser of our trace format for LogMX (see ``CeylanTraceParser.java``):
+We implemented a Java-based parser of our trace format for LogMX (see `CeylanTraceParser.java <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/conf/logmx/CeylanTraceParser.java>`__):
 
 :raw-html:`<center><img src="logmx-levels.png" id="responsive-image-large"></img></center>`
 :raw-latex:`\includegraphics[scale=0.28]{logmx-levels.png}`
@@ -524,8 +524,8 @@ Traces can be readily built and run on most Unices (including of course GNU/Linu
 Refer to `the Myriad counterpart section <http://myriad.esperide.org/#supported-platforms>`_ for more details.
 
 
-.. _`free software`:
 
+.. _`free software`:
 
 -------
 Licence
@@ -677,39 +677,23 @@ The testing shall complete successfully (if it is not the case, see our support_
 		  Reciprocally this procedure applies to the projects based on it (e.g. `US-Web <https://us-web.esperide.org/>`_), so in terms of usability, confidence should be high.
 
 
----------------
-Troubleshooting
----------------
+
+-----------------
+Trace Supervisors
+-----------------
+
+Currently, in practice, traces may be browsed as simple text files, PDF files or Traces (``*.traces``) files (thus following the `Traces file format <#internal-trace-format>`_, which is currently read only by our corresponding `trace parser <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/conf/logmx/CeylanTraceParser.java>`__).
+
+We certainly recommend LogMX - whose only constraint is to be a `commercial tool <https://logmx.com/buy>`_.
+
+We did not really find very relevant open-source alternatives (they would have notably to be feature-rich, stable, actively maintained, distributed with a suitable free software license.
+
+The best contenders that we identified are:
+
+- `OtrosLogViewer <https://github.com/otros-systems/otroslogviewer>`__
+- `Apache Chainsaw v2 <https://logging.apache.org/chainsaw/2.x/>`__
 
 
-Lost Traces
-===========
-
-If having sent traces that cannot be found through the trace supervision (or that even disappear live!), most probably that they were properly sent, collected and stored, but that they were too numerous to be displayed.
-
-In LogMX, this can be seen in the bottom-right status bar, where a fully-filled red rectangle shows the percentage of the maximum number of entries currently met: ``100%`` most likely means that too many traces were to be displayed for the current settings, and thus that latter traces replaced former ones.
-
-A solution is either to send less traces, or to increase that display threshold, either directly in to the LogMX interface (by entering an higher value on the left of said rectangle), or in the ``logmx.properties`` configuration file, by setting its ``autoRefreshEntriesLimit`` attribute to an higher value.
-
-A related setting is the `max memory`_ that the (Java) configuration of LogMX allows.
-
-
-
-Duplicated Traces
-=================
-
-In rather rare contexts (typically when requesting LogMX to focus on the last entries, whereas dozens of thousands of them are added), the trace supervision may show duplicated traces.
-
-For example, an emitter that sent 6 traces will be marked as having sent 8 of them, and a pair of successive traces will be shown twice (first that pair, then other traces may interleave, then the pair will be listed again), with non-duplicated IDs (as shown in the leftmost LogMX column).
-
-It is just an artefact due to this specific execution of LogMX though: one can check that reading this file again, but this time as a whole (instead of live) does not show duplicated traces anymore; indeed these traces were actually stored by Ceylan-Traces in the ``*.traces`` file only once.
-
-
-
-Lost LogMX Settings
-===================
-
-LogMX will write its configuration files (notably ``logmx.properties``) when shutdown. So before modifying any of these files, ensure first that no LogMX instance is still running (otherwise one's changes will be overwritten).
 
 ---------------
 Troubleshooting
