--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ doc/Ceylan-Traces-Layer-technical-manual-english.html
 doc/Ceylan-Traces-Layer-technical-manual-english.rst
 doc/api-doc/
 doc/mathjax
+doc/Ceylan-Traces-Layer-technical-manual-english.aux
+doc/Ceylan-Traces-Layer-technical-manual-english.pdf
+doc/Ceylan-Traces-Layer-technical-manual-english.tex
+doc/Ceylan-Traces-Layer-technical-manual-english.toc
+doc/index.html
 
 # Former trace files:
 *.traces.previous
