--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -768,6 +768,14 @@ Arch users may also install a relevant Java with ``pacman -Sy jre-openjdk`` and 
 
 
 
+Requested Widths for LogMX Entry Columns Not Honored
+====================================================
+
+The preferred respective widths for the various entry columns can be set (in ``Tools -> Options -> Display``, thanks to the ``Entries table columns...`` button) and recorded (in ``logmx.properties``), yet, with some versions of Java, such settings might not be respected.
+
+At least on Arch Linux, switching (thanks to ``archlinux-java``) from ``java-24-openjdk`` back to ``java-11-openjdk`` allowed to restore the correct management of these settings (otherwise ignored with more recent Java versions - at least with ancient versions of LogMX).
+
+
 
 -------
 Support
